--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@celo-tools/use-contractkit": "^3.1.0",
+    "@celo/contractkit": "^10.0.2",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "ethers": "^6.15.0",
     "fp-ts": "^2.16.11",
     "io-ts": "^2.2.22",
+    "process": "^0.11.10",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "stream-browserify": "^3.0.0",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
