Add NFT-based marketplace with on-chain image storage and floating balloon UI
- Implement ERC721 NFT tokens for products with burnable functionality
- Store product images and metadata on-chain using base64 encoding
- Add purchaseProduct function that burns NFT when product is sold
- Update frontend with image upload functionality (file or URL)
- Add floating transparent balloon animations to UI
- Enhance styling with modern gradients and sleek design
- Add NFT badges to product cards
- Update contract address to 0xABD9E2A3bc4bdf520C82CcBC287095a125C56225
- Add deployment guides and automated address update script
- Switch to native CELO payments instead of cUSD

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^17.2.3",
     "hardhat": "^2.27.0"
   },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0"
+  },
   "type": "module"
 }
