--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "ethers": "^5.8.0",
     "fp-ts": "^2.16.11",
     "io-ts": "^2.2.22",
+    "nft.storage": "^7.2.0",
     "process": "^0.11.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
