Replace IPFS upload with imgur.com upload assistant
- Remove NFT.Storage dependency (API key issues)
- Add helpful upload assistant that guides users to imgur.com
- Opens imgur in new tab for easy image upload
- Supports data URL fallback for very small images (<50KB)
- Clear warnings about gas costs for data URLs
- Improved user experience with step-by-step guidance

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,12 @@
     "@celo-tools/use-contractkit": "^3.1.0",
     "@celo/contractkit": "^10.0.2",
     "assert": "^2.1.0",
+    "axios": "^1.13.2",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "ethers": "^5.8.0",
     "fp-ts": "^2.16.11",
     "io-ts": "^2.2.22",
-    "nft.storage": "^7.2.0",
     "process": "^0.11.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
