--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@celo-tools/use-contractkit": "^3.1.0",
-    "@celo/contractkit": "^10.0.2",
+    "@reown/appkit": "^1.8.14",
+    "@reown/appkit-adapter-ethers5": "^1.8.14",
+    "@tanstack/react-query": "^5.90.11",
     "assert": "^2.1.0",
     "axios": "^1.13.2",
     "buffer": "^6.0.3",
@@ -23,6 +24,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "stream-browserify": "^3.0.0",
+    "viem": "^2.40.3",
     "web3": "^4.16.0"
   },
   "devDependencies": {
